# gworldscene

./: .gitignore  README.md  meson.build  meson_options.txt
docs/: api-reference.rst  concepts.rst  conf.py  examples.rst  gtk-multi-backend-plan.md  index.rst  installation.rst
examples/: control-panel.vala  meson.build  simple.c
examples/assets/BillboardMarker/: README.md
examples/assets/GroundOverlay/: README.md
examples/assets/ToyCar/: README.md
examples/sqgi/: README.md  introspection-gtk3.nut  introspection-gtk4.nut  introspection.nut  simple-scene-gtk3.nut  simple-scene-gtk4.nut  simple-scene.nut
src/: GWorldScene-0.1.metadata  GWorldSceneGtk3-0.1.metadata  gworld-scene-camera-private.h  gworld-scene-camera.cpp  gworld-scene-geo-private.h  gworld-scene-geo.cpp  gworld-scene-light-private.h  gworld-scene-light.cpp  gworld-scene-lod-private.h  gworld-scene-lod.cpp  gworld-scene-node-private.h  gworld-scene-node.cpp  gworld-scene-node.h  gworld-scene-picking-private.h  gworld-scene-picking.cpp  gworld-scene-view-private.h  gworld-scene-view-shaders-private.h  gworld-scene-view-shaders.cpp  gworld-scene-view.cpp  gworld-scene-view.h  gworldscene-vapi-alias.pc.in  gworldscene.h  meson.build
src/gir-compat/bits/: math-vector.h
src/gworldscene/: gworldscene.h
tests/: camera-test.cpp  geo-test.cpp  light-test.cpp  lod-test.cpp  meson.build  node-test.cpp  picking-test.cpp  view-test.cpp
